--- a/index.html
+++ b/index.html
@@ -214,20 +214,20 @@
             Παλαιότερη κατάθεση χωρίς εκδοθείσα απόφαση: <br />
             🥇 24/7/2002
             - ΠΡΩΤΟΔΙΚΕΙΟ ΘΕΣΣΑΛΟΝΙΚΗΣ<br />
-            🥈 3/1/2005
-            - ΑΡΕΙΟΣ ΠΑΓΟΣ<br />🥉 23/10/2009
-            - ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br /><br />
+            🥈 9/5/2003
+            - ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br />🥉 15/7/2004
+            - ΑΡΕΙΟΣ ΠΑΓΟΣ<br /><br />
             Μεγαλύτερη απόσταση μεταξύ κατάθεσης και δικασίμου <br />
-            🥇 17/7/2012
-            - 14/3/2022
-            ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br />
-            🥈 5/9/2013
-            - 21/2/2023
-            ΕΦΕΤΕΙΟ ΑΘΗΝΩΝ<br />🥉 21/6/2017
-            - 27/5/2026
-            ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br />
+            🥇 15/7/2004
+            - 7/12/2022
+            ΑΡΕΙΟΣ ΠΑΓΟΣ<br />
+            🥈 1/10/2014
+            - 3/2/2026
+            ΕΙΡΗΝΟΔΙΚΕΙΟ ΠΕΙΡΑΙΑ<br />🥉 27/3/2018
+            - 27/2/2029
+            ΠΡΩΤΟΔΙΚΕΙΟ ΘΕΣΣΑΛΟΝΙΚΗΣ<br />
             <br />🕰<em> Τελευταίος έλεγχος:</em>
-            12/12/2023, 11:30:02 μ.μ.
+            12/12/2023, 11:45:02 μ.μ.
           </p>
         </section>
       </main>
