--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
           <h2 class="card__subtitle">Statistics</h2>
           <p>
             🤷🏻<em> Χρήστες:</em> 1795 <br />📁<em> Υποθέσεις:</em>
-            25216 <br />
+            25217 <br />
             <br />
             <span class="hall"><strong>🏛Hall Of Shame🏛</strong></span> <br />
             Παλαιότερη δικάσιμος χωρίς εκδοθείσα απόφαση:<br />
@@ -214,20 +214,20 @@
             Παλαιότερη κατάθεση χωρίς εκδοθείσα απόφαση: <br />
             🥇 24/7/2002
             - ΠΡΩΤΟΔΙΚΕΙΟ ΘΕΣΣΑΛΟΝΙΚΗΣ<br />
-            🥈 15/7/2004
-            - ΑΡΕΙΟΣ ΠΑΓΟΣ<br />🥉 3/1/2005
-            - ΑΡΕΙΟΣ ΠΑΓΟΣ<br /><br />
+            🥈 3/1/2005
+            - ΑΡΕΙΟΣ ΠΑΓΟΣ<br />🥉 23/10/2009
+            - ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br /><br />
             Μεγαλύτερη απόσταση μεταξύ κατάθεσης και δικασίμου <br />
-            🥇 3/8/2012
-            - 20/2/2023
-            ΕΙΡΗΝΟΔΙΚΕΙΟ ΑΧΑΡΝΩΝ<br />
+            🥇 15/7/2004
+            - 7/12/2022
+            ΑΡΕΙΟΣ ΠΑΓΟΣ<br />
             🥈 17/7/2012
             - 14/3/2022
             ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br />🥉 3/4/2014
             - 8/3/2023
             ΕΙΡΗΝΟΔΙΚΕΙΟ ΙΛΙΟΥ<br />
             <br />🕰<em> Τελευταίος έλεγχος:</em>
-            14/12/2023, 6:15:01 μ.μ.
+            14/12/2023, 6:30:02 μ.μ.
           </p>
         </section>
       </main>
