--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
           <h2 class="card__subtitle">Statistics</h2>
           <p>
             🤷🏻<em> Χρήστες:</em> 1795 <br />📁<em> Υποθέσεις:</em>
-            25217 <br />
+            25218 <br />
             <br />
             <span class="hall"><strong>🏛Hall Of Shame🏛</strong></span> <br />
             Παλαιότερη δικάσιμος χωρίς εκδοθείσα απόφαση:<br />
@@ -218,16 +218,16 @@
             - ΑΡΕΙΟΣ ΠΑΓΟΣ<br />🥉 23/10/2009
             - ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br /><br />
             Μεγαλύτερη απόσταση μεταξύ κατάθεσης και δικασίμου <br />
-            🥇 15/7/2004
-            - 7/12/2022
-            ΑΡΕΙΟΣ ΠΑΓΟΣ<br />
-            🥈 17/7/2012
+            🥇 17/7/2012
             - 14/3/2022
-            ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br />🥉 3/4/2014
+            ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br />
+            🥈 3/4/2014
             - 8/3/2023
-            ΕΙΡΗΝΟΔΙΚΕΙΟ ΙΛΙΟΥ<br />
+            ΕΙΡΗΝΟΔΙΚΕΙΟ ΙΛΙΟΥ<br />🥉 11/3/2013
+            - 10/2/2022
+            ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br />
             <br />🕰<em> Τελευταίος έλεγχος:</em>
-            14/12/2023, 6:30:02 μ.μ.
+            14/12/2023, 6:45:02 μ.μ.
           </p>
         </section>
       </main>
