--- a/index.html
+++ b/index.html
@@ -221,13 +221,13 @@
             🥇 15/7/2004
             - 7/12/2022
             ΑΡΕΙΟΣ ΠΑΓΟΣ<br />
-            🥈 27/11/2012
-            - 10/3/2023
-            ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br />🥉 14/3/2018
-            - 14/3/2028
-            ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br />
+            🥈 1/10/2014
+            - 3/2/2026
+            ΕΙΡΗΝΟΔΙΚΕΙΟ ΠΕΙΡΑΙΑ<br />🥉 27/3/2018
+            - 27/2/2029
+            ΠΡΩΤΟΔΙΚΕΙΟ ΘΕΣΣΑΛΟΝΙΚΗΣ<br />
             <br />🕰<em> Τελευταίος έλεγχος:</em>
-            23/12/2023, 9:45:01 π.μ.
+            23/12/2023, 10:00:01 π.μ.
           </p>
         </section>
       </main>
