--- a/index.html
+++ b/index.html
@@ -214,20 +214,20 @@
             Παλαιότερη κατάθεση χωρίς εκδοθείσα απόφαση: <br />
             🥇 24/7/2002
             - ΠΡΩΤΟΔΙΚΕΙΟ ΘΕΣΣΑΛΟΝΙΚΗΣ<br />
-            🥈 15/7/2004
-            - ΑΡΕΙΟΣ ΠΑΓΟΣ<br />🥉 27/11/2012
-            - ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br /><br />
+            🥈 9/5/2003
+            - ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br />🥉 15/7/2004
+            - ΑΡΕΙΟΣ ΠΑΓΟΣ<br /><br />
             Μεγαλύτερη απόσταση μεταξύ κατάθεσης και δικασίμου <br />
             🥇 15/7/2004
             - 7/12/2022
             ΑΡΕΙΟΣ ΠΑΓΟΣ<br />
-            🥈 27/11/2012
-            - 10/3/2023
-            ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br />🥉 14/3/2018
-            - 14/3/2028
-            ΠΡΩΤΟΔΙΚΕΙΟ ΑΘΗΝΩΝ<br />
+            🥈 1/10/2014
+            - 3/2/2026
+            ΕΙΡΗΝΟΔΙΚΕΙΟ ΠΕΙΡΑΙΑ<br />🥉 27/3/2018
+            - 27/2/2029
+            ΠΡΩΤΟΔΙΚΕΙΟ ΘΕΣΣΑΛΟΝΙΚΗΣ<br />
             <br />🕰<em> Τελευταίος έλεγχος:</em>
-            29/12/2023, 12:00:01 π.μ.
+            29/12/2023, 12:15:01 π.μ.
           </p>
         </section>
       </main>
